<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/server_info_layout"
            android:layout_width="match_parent"
            android:layout_height="117dp"
            android:orientation="vertical"
            android:padding="16dp">


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="93dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp">

                <TextView
                    android:id="@+id/server_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="-6dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/servername"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat"
                    android:textSize="19sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:targetApi="o" />

                <ImageView
                    android:id="@+id/game_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"

                    android:layout_marginStart="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/image_view_2"
                    app:layout_constraintBottom_toTopOf="@+id/player_count_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/server_name_label"
                    app:srcCompat="@android:color/transparent" />

                <TextView
                    android:id="@+id/player_count_label"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/player"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/server_name_label" />


                <ImageView
                    android:id="@+id/status_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="32dp"
                    android:contentDescription="@string/image_view_1"
                    android:scaleType="fitEnd"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@android:color/transparent" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>